--- a/devbox/Dockerfile
+++ b/devbox/Dockerfile
@@ -2,10 +2,10 @@ FROM rockylinux:9
 
 RUN dnf clean all
 RUN dnf -y install epel-release
+RUN dnf -y install 'dnf-command(config-manager)'
 RUN dnf -y config-manager --set-enabled crb
 RUN dnf -y update
 RUN dnf -y install lsof vim git sudo openssh-server passwd file
-RUN dnf -y install ansible
 RUN dnf -y install httpd mod_ssl
 RUN /usr/libexec/httpd-ssl-gencerts
 
