--- a/devbox/provision/main.yml
+++ b/devbox/provision/main.yml
@@ -15,6 +15,7 @@
      state: installed
   - shell: echo -e "*********\nYou can always reprovision by running\n%>bash /box/devbox/provision/ansible.sh\n*********\n" > /etc/motd
   - shell: echo "alias la='ls -la'" > /etc/profile.d/dev.sh
+  - shell: "git config --global --add safe.directory '*'"
 - import_playbook: omd/omd.yml
 - import_playbook: apache/apache.yml
 - import_playbook: naemon/naemon.yml
@@ -23,6 +24,7 @@
 - import_playbook: node-exporter/node-exporter.yml
 #- import_playbook: prometheus-nagios-exporter/prometheus-nagios-exporter.yml
 - import_playbook: thruk/thruk.yml
+- import_playbook: gearmand/gearmand.yml
 - import_playbook: mod-gearman/mod-gearman.yml
 - import_playbook: mod-gearman-worker-go/mod-gearman-worker-go.yml
 #- import_playbook: nagflux/nagflux.yml
