--- a/devbox/provision/golang/golang.yml
+++ b/devbox/provision/golang/golang.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: all
   vars:
-    golang: 1.19.3-2.fc38
-    srcurl: https://kojipkgs.fedoraproject.org/packages/golang/1.19.3/2.fc38
+    golang: 1.20.7-1.fc38
+    srcurl: https://kojipkgs.fedoraproject.org/packages/golang/1.20.7/1.fc38/
   tasks:
   - name: "install golang"
     yum:
