--- a/devbox/provision/main.yml
+++ b/devbox/provision/main.yml
@@ -28,6 +28,7 @@
 - import_playbook: mod-gearman/mod-gearman.yml
 - import_playbook: mod-gearman-worker-go/mod-gearman-worker-go.yml
 #- import_playbook: nagflux/nagflux.yml
+- import_playbook: histou/histou.yml
 # this should be the last regular playbook
 - import_playbook: git/git.yml
 
