--- a/devbox/provision/thruk/thruk.yml
+++ b/devbox/provision/thruk/thruk.yml
@@ -5,7 +5,7 @@
   - name: "thruk build requirements"
     yum: name=make,perl-Module-Install,npm state=installed
   - name: "git clone thruk"
-    command: git clone git://github.com/sni/thruk.git
+    command: git clone https://github.com/sni/thruk.git
     args:
       chdir: /src
       creates: /src/thruk/.git
@@ -16,7 +16,7 @@
     command: |
       chmod -R g=u /src/thruk
   - name: "git clone omd_utils"
-    command: git clone git://github.com/sni/omd_utils.git
+    command: git clone https://github.com/sni/omd_utils.git
     args:
       chdir: /src
       creates: /src/omd_utils/.git
